# gh-ac-1

./: .gitignore  CLAUDE.md  README.md  TREND-REPORT.md
.aidlc-rule-details/common/: overview.md
.aidlc-rule-details/inception/: design-principles.md
.aidlc-rule-details/operations/: monitoring.md
.github/: copilot-instructions.md
.github/workflows/: issue-triage.yml  pr-review.yml  readme-update.yml  trend-report.yml
agents/core/: __init__.py  base_agent.py  github_client.py  orchestrator.py  pyproject.toml  rule_loader.py
agents/core/tests/: test_base_agent.py  test_github_client.py  test_orchestrator.py  test_rule_loader.py
agents/fix/: __init__.py  fix_agent.py  fix_service.py  pyproject.toml
agents/fix/tests/: test_fix_agent.py
agents/issue_triage/: __init__.py  aggregator.py  classifier.py  component.py  duplicate.py  pyproject.toml  reproduction.py  service.py  severity.py
agents/issue_triage/tests/: test_aggregator.py  test_classifier.py
agents/pr_review/: __init__.py  aggregator.py  architecture.py  pyproject.toml  req_checker.py  security.py  service.py  test_coverage.py
agents/pr_review/tests/: test_aggregator.py
agents/readme_updater/: readme_agent.py  service.py
agents/reporting/: linker.py  pyproject.toml  service.py  trend_reporter.py
agents/reporting/tests/: test_linker.py  (+1 more)
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/inception/: questions-requirements.md
infra/cloudformation/: stack.yml
infra/terraform/: alb_security_groups.tf  main.tf  outputs.tf  rds_security_groups.tf  security_groups.tf  variables.tf
(+27 files in other folders)
